# cpplox

./: .clang-tidy  .gitignore  CMakeLists.txt
include/: ast.h  ast_printer.h  environment.h  error.h  interpreter.h  lox.h  lox_callable.h  lox_class.h  lox_function.h  lox_instance.h  native_function.h  parser.h  resolver.h  runtime_error.h  scanner.h  stmt.h  token.h
src/: ast_printer.cpp  ast_printer_driver.cpp  interpreter.cpp  lox.cpp  main.cpp  parser.cpp  resolve.cpp  scanner.cpp  token.cpp
